Thu Aug 29 05:35:58 2013  Eric Hodel  <drbrain@segment7.net>

	* ext/zlib/zlib.c (zstream_run):  Fix handling of deflate streams that
	  need a dictionary but are being decompressed by Zlib::Inflate.inflate
	  (which has no option to set a dictionary).  Now Zlib::NeedDict is
	  raised instead of crashing.  [ruby-trunk - Bug #8829]
	* test/zlib/test_zlib.rb (TestZlibInflate):  Test for the above.

Thu Aug 29 02:40:45 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb: invalid floats should be
	  treated as strings.
	  [Fixes GH-156] https://github.com/tenderlove/psych/issues/156

	* test/psych/test_string.rb: test for change

Wed Aug 28 17:20:07 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (hpux_attr_getstackaddr): basic support for the
	  get_stack() under HP-UX.  based on the patch by michal@rokos.cz
	  (Michal Rokos) at [ruby-core:56645].  [Feature #8793]

Wed Aug 28 11:24:20 2013  Michal Rokos  <michal@rokos.cz>

	* configure.in (sys/pstat.h): fix missing header check for
	  missing/setproctitle.c on HP-UX.  [ruby-core:56644] [Bug #8792]

Wed Aug 28 04:54:33 2013  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl/ossl_ssl.c (ossl_ssl_read):  Replace duplicate
	  wait_writable with wait_readable.

Tue Aug 27 17:18:40 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/timeout.rb (Timeout#timeout): skip rescue clause only when no
	  exception class is given.

Tue Aug 27 17:02:58 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (copy_stream_body): should write in binary mode.  based on a
	  patch by godfat (Lin Jen-Shin) at [ruby-core:56556].
	  [ruby-core:56518] [Bug #8767]

Tue Aug 27 17:02:33 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (copy_stream_body): move common open flags.

Tue Aug 27 16:56:50 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (enumerator_size): use rb_check_funcall() instead of
	  respond_to? and call.
