@@ -1,3 +1,10 @@
+Thu Aug 29 17:03:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm_insnhelper.c (vm_call_method): a method entry refers the based
+	  class/module, so should search superclass from the origin i-class
+	  where the entry belongs to, to get rid of infinite loop when zsuper
+	  in a prepended class/module.  [ruby-core:54105] [Bug #8238]
+
 Thu Aug 29 05:35:58 2013  Eric Hodel  <drbrain@segment7.net>
 
 	* ext/zlib/zlib.c (zstream_run):  Fix handling of deflate streams that
